--- a/app/views/layout-psd-menu_help.html
+++ b/app/views/layout-psd-menu_help.html
@@ -101,7 +101,7 @@
           <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="#">Home</a>
           </li>
-          <li class="psd-header__navigation-item psd-header__navigation-item--active">
+          <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="#">Cases</a>
           </li>
           <li class="psd-header__navigation-item ">
@@ -109,6 +109,9 @@
           </li>
           <li class="psd-header__navigation-item ">
             <a class="psd-header__link" href="#">Products</a>
+          </li>
+          <li class="psd-header__navigation-item psd-header__navigation-item--right-2 psd-header__navigation-item--active">
+            <a class="psd-header__link" href="#">Help</a>
           </li>
           <li class="psd-header__navigation-item psd-header__navigation-item--right">
             <a class="psd-header__link" href="#">Your team</a>
