updates to footer links

--- a/app/views/psd-revised-flow/redirect-user.html
+++ b/app/views/psd-revised-flow/redirect-user.html
@@ -39,8 +39,6 @@ Go to the products area
 
                                 <p class="govuk-body">
                                     A case and a product record are separate. Cases record information about allegations, evidence, and corrective actions. A product record describes the product and is included <em>within</em> a case.
-
-                                    <!--A case does not contain product information. Instead, a case includes a product record. (The product record contains the product information). When you create a case from a product record, the product record is included in your case.-->
                                 </p>
 
                                 <ol class="govuk-list govuk-list--number govuk-list--spaced govuk-!-margin-left-6">
@@ -61,6 +59,10 @@ Go to the products area
 
                                 <p class="govuk-body">
                                     <span class="govuk-!-font-weight-bold">If a suitable product record does not already exist</span>, create a new product record and then create your case from that product record.
+                                </p>
+
+                                <p class="govuk-body">
+                                    For more information about <a href="help-how-to-use-psd.html" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">how to use the <abbr title="Product Safety Database">PSD</abbr> <span class="govuk-visually-hidden">online service</span> (opens in a new tab)</a>
                                 </p>
 
                             </div>
