--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -404,6 +404,11 @@ abbr[title] {
             border-bottom: 1px dotted $govuk-secondary-text-colour;
             cursor: help;
         }
+
+        a.govuk-link & {
+            border-bottom: none;
+            cursor: inherit;
+        }
     }
 }
 
