--- a/app/views/psd-file-upload/success.html
+++ b/app/views/psd-file-upload/success.html
@@ -598,7 +598,7 @@
 
         <ul class="govuk-footer__inline-list">
 
-          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link govuk-!-margin-right-2" target="_blank" href="/psd-revised-flow/help-how-to-use-psd">How to use the <abbr>PSD</abbr><span class="govuk-visually-hidden"> (opens in new tab)</span></a></li>
+          <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link govuk-!-margin-right-2" target="_blank" rel="noreferrer noopener" href="/psd-revised-flow/help-how-to-use-psd">How to use the <abbr>PSD</abbr><span class="govuk-visually-hidden"> (opens in new tab)</span></a></li>
           <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link govuk-!-margin-right-2" href="/help/accessibility">Accessibility</a></li>
           <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link govuk-!-margin-right-2" target="_blank" href="/help/privacy-notice">Privacy policy<span class="govuk-visually-hidden"> (opens in new tab)</span></a></li>
           <li class="govuk-footer__inline-list-item"><a class="govuk-footer__link govuk-!-margin-right-2" target="_blank" href="/help/terms-and-conditions">Terms and conditions<span class="govuk-visually-hidden"> (opens in new tab)</span></a></li>
