--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -394,7 +394,7 @@ How to operate the Product Safety Database
         </p>
 
         <p class="govuk-body">
-            Which team currently owns and has editing permission for the product record is also displayed. Any team can still include the product record within their own cases.
+            Which team currently owns and has editing permission for the product record is also displayed. Any team can still include the product record within their own case.
         </p>
 
         <!--p class="govuk-body">
@@ -449,7 +449,7 @@ How to operate the Product Safety Database
             </h2>
 
             <p class="govuk-body-s">
-                For guidance and information for how market surveillance authorities should notify products, which pose a risk to the health and safety of consumers and / or are noncompliant, visit:
+                For guidance and information on how market surveillance authorities should notify products, which pose a risk to the health and safety of consumers and / or are noncompliant, visit:
             </p>
 
             <p class="govuk-body-s">
