copy updates to help

--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -125,12 +125,12 @@ How to operate the Product Safety Database
         </div>
 
         <figure class="govuk-!-margin-bottom-5">
-            <img src="../public/images/help_one-to-many.gif" class="opss-desktop-img-m" alt="Diagram showing cases and product records relationship">
-            <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">One product record can be included within many cases</figcaption>
+            <img src="../public/images/help_one-to-many.gif" class="opss-desktop-img-m" alt="Diagram showing the product record and cases relationship">
+            <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">A product record can be included within many cases</figcaption>
         </figure>
 
         <p class="govuk-body">
-            In the <span class="govuk-!-font-weight-bold">products area</span> you can find the product records which are included in your cases or search the entire database of product records. A product record only contains information about a product (such as its brand name and model name, barcode, and its catagorisation) and doesn't include case information. A single product record can be included within many cases.
+            In the <span class="govuk-!-font-weight-bold">products area</span> you can find the product records which are included in your cases or search the entire database of product records. A product record only contains information about a product (such as its brand name, barcode, and its categorisation) and does not include case information. A product record can be reused within many cases and within cases created by any team.
         </p>
 
         <p class="govuk-body">
@@ -286,7 +286,7 @@ How to operate the Product Safety Database
                 <li>Open the case to view the main case page</li>
                 <li>In the 'Sharing and collaboration' section, select the 'Change' option in the 'Teams added to case' row</li>
                 <li>On the 'Teams added to the case' page, select 'Add a team to the case'</li>
-                <li>On the 'Add a team to the case' page, search for <br class="opss-br-desktop">&quot;<abbr>OPSS</abbr> Incident Management&quot;</li>
+                <li>On the 'Add a team to the case' page, search for and select <br class="opss-br-desktop">&quot;<abbr>OPSS</abbr> Incident Management&quot;</li>
                 <li>Complete the form</li>
             </ol>
         </div>
@@ -430,7 +430,7 @@ How to operate the Product Safety Database
 
         <div class="govuk-inset-text">
             <p class="govuk-body">
-                You can add and remove product records from your cases.
+                You can also add and remove product records from your cases.
             </p>
         </div>
 
