help text updates

--- a/app/views/psd-revised-flow/consignment-ref/edit-customs-codes.html
+++ b/app/views/psd-revised-flow/consignment-ref/edit-customs-codes.html
@@ -56,7 +56,7 @@ href: "customs-codes-04"
 
                 <div id="ucr-numbers-hint" class="govuk-hint">
                     <span class="govuk-!-display-block govuk-!-font-size-16">
-                        <abbr>UCR</abbr> numbers are between 12 and 35 characters.
+                        <abbr>UCR</abbr> numbers are between 12 and 35 characters long.
                     </span>
                 </div>
 
