--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -102,7 +102,7 @@ How to operate the Product Safety Database
         <h3 class="govuk-heading-m" id="content-01">Overview</h3>
 
         <p class="govuk-body">
-            The two main areas within the <abbr>PSD</abbr> online service are the cases area and the products area. These are accessed using the main navigation menu (towards the top<span class="govuk-visually-hidden">/start</span> of each page).
+            The two main areas within the <abbr>PSD</abbr> online service are the <span class="govuk-!-font-weight-bold">cases area</span> and the <span class="govuk-!-font-weight-bold">products area</span>. These are accessed using the main navigation menu (towards the top<span class="govuk-visually-hidden">/start</span> of each page).
         </p>
 
         <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
@@ -130,7 +130,7 @@ How to operate the Product Safety Database
         </figure>
 
         <p class="govuk-body">
-            In the <span class="govuk-!-font-weight-bold">products area</span> you can find the product records which are included in your cases or search the entire database of product records. A product record only contains information about a product (such as its brand name, barcode, and its categorisation) and does not include case information. A product record can be reused within many cases and within cases created by any team.
+            In the <span class="govuk-!-font-weight-bold">products area</span> you can find the product records which are included in your cases or search the entire database of product records. A product record only contains information about a product (such as its brand name, barcode, and its categorisation) and does not include case information. A product record can be reused within many cases and in cases created by any team.
         </p>
 
         <p class="govuk-body">
@@ -218,11 +218,11 @@ How to operate the Product Safety Database
         </figure>
 
         <p class="govuk-body">
-            The secondary case navigation menu provides access to all the information that forms one case. These include, the main case page, the product(s), relevant businesses, case images and all the supporting information for the case, such as risk assessments and corrective actions.
+            The secondary case navigation menu provides access to all the information that forms one case. These include, the main case information, products, businesses, case images and all the supporting information for the case (such as risk assessments and corrective actions).
         </p>
 
         <p class="govuk-body">
-            On the products page for an individual case, you can find basic information about the product(s) included in the case, and see which cases within the <abbr>PSD</abbr> have also included the product record. To view all the cases relating to the same product record, select the 'Cases' tab.
+            On the products page for an individual case, you can find basic information about the product(s) included in the case, and see which cases within the <abbr>PSD</abbr> have also included the product record. To view all the cases relating to the same product record, select the 'Cases' tab (in the body of the case products page).
         </p>
 
         <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-05">
@@ -323,8 +323,7 @@ How to operate the Product Safety Database
             </p>
 
             <ol class="govuk-list govuk-list--number govuk-list--spaced">
-                <li>In the products area &hellip;</li>
-                <li>Select the 'Create a new product record' option on the 'Your products', 'Team products' or 'All products &ndash; Search' page</li>
+                <li>In the products area, select the 'Create a new product record' option on the 'Your products', 'Team products' or 'All products &ndash; Search' page</li>
                 <li>Complete the form journey process</li>
             </ol>
         </div>
@@ -339,7 +338,7 @@ How to operate the Product Safety Database
         </p>
 
         <p class="govuk-body">
-            When you create a product record, your team has exclusive editing permission &ndash; and &quot;owns&quot; the product record &ndash; until your team closes all cases which have included the product record.
+            When you create a product record, your team has exclusive editing permission &ndash; and owns the product record &ndash; until your team closes all cases which have included the product record.
         </p>
 
         <p class="govuk-body">
@@ -440,7 +439,7 @@ How to operate the Product Safety Database
 
     </article>
 
-    <aside class="govuk-grid-column-one-third opss-desktop-sticky">
+    <aside class="govuk-grid-column-one-third">
 
         <div class="govuk-!-padding-top-3 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-margin-bottom-4 opss-blue-border-top">
             <h2 class="govuk-heading-s">
