--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -30,7 +30,7 @@ How to operate the Product Safety Database
         <div class="govuk-!-margin-bottom-8 govuk-!-padding-top-5 govuk-!-padding-right-4 govuk-!-padding-bottom-1 govuk-!-padding-left-5 opss-blue-border-all">
 
             <h2 class="govuk-heading-s govuk-!-margin-bottom-5">
-                In early 2023 &ndash; How cases work and are created has changed
+                In early 2023 &ndash; How cases work and are created was changed
             </h2>
 
             <p class="govuk-body">
