--- a/app/views/psd-revised-flow/redirect-user.html
+++ b/app/views/psd-revised-flow/redirect-user.html
@@ -62,7 +62,7 @@ Go to the products area
                                 </p>
 
                                 <p class="govuk-body">
-                                    For more information about <a href="help-how-to-use-psd.html" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">how to use the <abbr title="Product Safety Database">PSD</abbr> <span class="govuk-visually-hidden">online service</span> (opens in a new tab)</a>
+                                    For more information, visit <a href="help-how-to-use-psd.html" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">how to use the <abbr title="Product Safety Database">PSD</abbr> <span class="govuk-visually-hidden">online service</span> (opens in a new tab)</a>
                                 </p>
 
                             </div>
