--- a/app/views/psd-revised-flow/what-is-the-case-name.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name.html
@@ -49,15 +49,15 @@ href: "do-you-want-to-add-a-ref-number"
             <h2 class="govuk-heading-s">Case name examples</h2>
 
             <p class="govuk-body-s opss-secondary-text">
-                A suggested format would be, brand name, model name and description of the hazard.
+                A suggested format for the <abbr>PSD</abbr> would be, brand name, model name and description of the hazard.
             </p>
 
             <ul id="case-name-examples" class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-font-size-16 opss-secondary-text">
-                <li>Non nisi in omnis nobis facere tempora</li>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Consectetur adipisicing elit</li>
-                <li>Minolta 220 handheld camera burning fingers</li>
-                <li>Hoover H3W998 washing machine overheating</li>
+                <li>Microsoft Xbox Series X gaming console overheating</li>
+                <li>Chairplan Gary office chair - flammable</li>
+                <li>JoJo Maman B&eacute;b&eacute; James bear has sharp hazards</li>
+                <li>Minolta Compact 220 handheld camera - burns fingers</li>
+                <li>Hoover H3W998 washing machine electric shocks</li>
             </ul>
         </div>
 
