name examples updated

--- a/app/views/psd-revised-flow/what-is-the-case-name.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name.html
@@ -53,11 +53,11 @@ href: "do-you-want-to-add-a-ref-number"
             </p>
 
             <ul id="case-name-examples" class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-font-size-16 opss-secondary-text">
-                <li>Microsoft Xbox Series X gaming console overheating</li>
-                <li>Chairplan Gary office chair - flammable</li>
-                <li>JoJo Maman B&eacute;b&eacute; James bear has sharp hazards</li>
-                <li>Minolta Compact 220 handheld camera - burns fingers</li>
-                <li>Hoover H3W998 washing machine electric shocks</li>
+                <li>Microsoft Xbox Series X gaming console causing burns</li>
+                <li>Chairplan Gary office chair - flammable health risk</li>
+                <li>JoJo Maman B&eacute;b&eacute; James bear causing injuries</li>
+                <li>Minolta Compact 220 handheld camera - damage to sight</li>
+                <li>Hoover H3W998 washing machine, electric shock</li>
             </ul>
         </div>
 
